doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/qaasim/Documents/APCS/gpdraw.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/qaasim/Documents/GitHub/APCSProj
-d
/Users/qaasim/Documents/GitHub/APCSProj/doc
-encoding
UTF-8
-charset
UTF-8
/Users/qaasim/Documents/GitHub/APCSProj/APCSProj.java
<---- end of javadoc command ---->
Loading source file /Users/qaasim/Documents/GitHub/APCSProj/APCSProj.java...
/Users/qaasim/Documents/GitHub/APCSProj/APCSProj.java:11: error: invalid method declaration; return type required
    public  SimpleTableDemo() {
            ^
1 error
